Bugfix update + Upstream (Pufferfish)
Closes #11