@@ -33,9 +33,6 @@ subprojects {
     tasks.withType<JavaCompile> {
         options.encoding = Charsets.UTF_8.name()
         options.release.set(17)
-        options.compilerArgs = listOf(
-                "--add-modules", "jdk.incubator.vector" 
-        )
     }
     tasks.withType<Javadoc> {
         options.encoding = Charsets.UTF_8.name()
